correct branch name

--- a/.github/workflows/mavenTests.yml
+++ b/.github/workflows/mavenTests.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - main
-      - develop
+      - develop1
   pull_request:
     branches:
       - main
-      - develop
+      - develop1
   workflow_dispatch:
 
 jobs:
